# gpt-jax

./: .gitignore  README.md  encoder.py  main.py  model.py  pyproject.toml  sampling.py  tests.py
